--- a/bloco_3/dia_1/trybe_marketing.html
+++ b/bloco_3/dia_1/trybe_marketing.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trybe Turma 14</title>
+    <title>Acelere sua carreira em tecnologia aqui e agora | Trybe</title>
 </head>
 <body>
-    
+  <h1>Sua carreira de sucesso em tecnologia começa aqui. Agora.</h1>
+  <img src="images/smiling-image.jpeg" alt="Homem sorrindo" width="400px">   
 </body>
 </html>
