Mudança na borda das imagens e estrutura do botao

--- a/bloco_3/dia_1/trybe_marketing.html
+++ b/bloco_3/dia_1/trybe_marketing.html
@@ -26,6 +26,24 @@
         font-size: 28px;
       }
 
+      .testimonial_name {
+        line-height: 20px;
+        font-size: 14px;
+        font-weight: 600;
+      }
+
+      .picture {
+        border-radius: 50%;
+      }
+
+      .button {
+        background-color: #11a36a;
+        padding: 15px 30px;
+        border-radius: 4px;
+        color: #ffffff;
+        text-decoration: none;
+      }
+
     </style>
   </head>  
 
@@ -53,36 +71,36 @@
       <strong>E QUE TENHA MUITA VONTADE E DEDICAÇÃO!</strong>
     </p>
 
-    <img src="images/conrado-medeiros.png" alt="Conrado Medeiros" width="100px">
+    <img class="picture" src="images/conrado-medeiros.png" alt="Conrado Medeiros" width="100px">
     <p class="paragraph_geral">
       <em>"Eu trabalho com Marketing e não tinha nenhuma formação ou experiência na área e consegui entrar na Trybe para me tornar desenvolvedor de software."</em>
     </p>
-    <h4 class="trybe_green">Conrado Medeiros<br>Aluno da Turma de Setembro - BH</h4>
+    <h4 class="trybe_green testimonial_name">Conrado Medeiros<br>Aluno da Turma de Setembro - BH</h4>
 
-    <img src="images/gabriel-dos-santos.png" alt="Gabriel Santos" width="100px">
+    <img class="picture" src="images/gabriel-dos-santos.png" alt="Gabriel Santos" width="100px">
     <p class="paragraph_geral">
       <em>"Eu não sabia nada de programação! Estudei os conteúdos gratuitos disponibilizados, consegui fazer o processo e passar. Estou aqui firme e forte para conseguir virar um desenvolvedor."
       </em>
     </p>
-    <h4 class="trybe_green">Gabriel dos Santos<br>Aluno da Turma de Setembro - BH</h4>
+    <h4 class="trybe_green testimonial_name">Gabriel dos Santos<br>Aluno da Turma de Setembro - BH</h4>
 
-    <img src="images/anderson-bolivar.png" alt="Anderson Bolivar" width="100px">
+    <img class="picture" src="images/anderson-bolivar.png" alt="Anderson Bolivar" width="100px">
     <p class="paragraph_geral">
       <em>"Sou estudante de Engenharia Química e entrei na Trybe sem nenhuma experiência na área e estou animado para me tornar desenvolvedor."
     </em>
     </p>
-    <h4 class="trybe_green">Anderson Bolivar<br>Aluno da Turma de Setembro - BH</h4>
+    <h4 class="trybe_green testimonial_name">Anderson Bolivar<br>Aluno da Turma de Setembro - BH</h4>
 
     <hr>
 
     <h3 class="trybe_green section_title">Quem somos e por que estamos aqui?</h3>
-    <img src="https://uploads-ssl.webflow.com/5d4c18a28620ae5d4f33af94/5d82bafbe8178d5be56113af_Matheus%20Goyas.jpeg" alt="Matheus Goyas" width="100px">
+    <img class="picture" src="https://uploads-ssl.webflow.com/5d4c18a28620ae5d4f33af94/5d82bafbe8178d5be56113af_Matheus%20Goyas.jpeg" alt="Matheus Goyas" width="100px">
     <p>
       Fundamos a Trybe porque acreditamos que qualquer pessoa que tenha muita vontade de vencer, independente da formação ou da condição financeira, é capaz de ter uma carreira de sucesso.
     </p>
     <h4>Matheus Goyas,<br>CEO e Co-fundador da Trybe</h4>
 
-    <img src="https://uploads-ssl.webflow.com/5d4c18a28620ae5d4f33af94/5d82bb0b28a6013c896ebf4b_Joao%20Daniel.jpeg" alt="João Duarte" width="100px">
+    <img class="picture" src="https://uploads-ssl.webflow.com/5d4c18a28620ae5d4f33af94/5d82bb0b28a6013c896ebf4b_Joao%20Daniel.jpeg" alt="João Duarte" width="100px">
     <p>
       Temos a premissa de fazer os estudantes viverem na prática desafios idênticos aos enfrentados na vida real. Nosso compromisso é tão grande com o sucesso, que a Trybe só ganha se os nossos estudantes estiverem ganhando bem.
     </p>
@@ -103,6 +121,6 @@
     <hr>
 
     <h4 class="trybe_green">Quer saber mais sobre nossa formação?</h4>
-    <a href="https://www.betrybe.com/" target="_blank">Faça o download do nosso currículo</a>
+    <a class="button" href="https://www.betrybe.com/" target="_blank"><strong>Faça o download do nosso currículo</strong></a>
   </body>
 </html>
