Adiciona o arquivo style.css e cria o link

--- a/bloco_3/dia_1/trybe_marketing.html
+++ b/bloco_3/dia_1/trybe_marketing.html
@@ -7,44 +7,7 @@
     <title>Acelere sua carreira em tecnologia aqui e agora | Trybe</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: Montserrat, sans-serif;
-      }
-     
-      .paragraph_geral {
-        color: #475550;
-      }
-
-      .trybe_green {
-        color: #11a36a;
-      }
-
-      .section_title {
-        line-height: 42px;
-        font-weight: 600;
-        font-size: 28px;
-      }
-
-      .testimonial_name {
-        line-height: 20px;
-        font-size: 14px;
-        font-weight: 600;
-      }
-
-      .picture {
-        border-radius: 50%;
-      }
-
-      .button {
-        background-color: #11a36a;
-        padding: 15px 30px;
-        border-radius: 4px;
-        color: #ffffff;
-        text-decoration: none;
-      }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>  
 
   <body>
