--- a/bloco_3/dia_1/trybe_marketing.html
+++ b/bloco_3/dia_1/trybe_marketing.html
@@ -11,17 +11,19 @@
   </head>  
 
   <body>
-
-    <h1>Sua carreira de sucesso em tecnologia começa aqui. Agora.</h1>
-    <img src="images/smiling-image.jpeg" alt="Homem sorrindo" width="400px">
-    <p>
-      Com atividades presenciais e online, mentorias individuais e desafios práticos, a Trybe é a escola do futuro e para o futuro que acelera sua carreira em desenvolvimento de software em até 12 meses.
-    </p>
-    <p>
-      E o melhor? <strong>Você não paga nada até conseguir um trabalho com uma remuneração de, no mínimo, R$ 3.000,00 por mês.</strong>
-    </p>
-
-    <hr>
+    <div class="header">
+      <div class="header-content">
+        <h1 class="main-title">Sua carreira de sucesso em tecnologia começa aqui. Agora.</h1>
+        <div class="header-text">
+          <p>
+            Com atividades presenciais e online, mentorias individuais e desafios práticos, a Trybe é a escola do futuro e para o futuro que acelera sua carreira em desenvolvimento de software em até 12 meses.
+          </p>
+          <p>
+            E o melhor? <strong>Você não paga nada até conseguir um trabalho com uma remuneração de, no mínimo, R$ 3.000,00 por mês.</strong>
+          </p>
+        </div>
+      </div>
+    </div>
 
     <h3 class="trybe_green section_title">A Trybe é para todos, inclusive para <strong>VOCÊ.</strong></h3>
     <p class="paragraph_geral">
