Estiliza a Trybe e para todos...

--- a/bloco_3/dia_1/trybe_marketing.html
+++ b/bloco_3/dia_1/trybe_marketing.html
@@ -25,17 +25,20 @@
       </div>
     </div>
 
-    <h3 class="trybe_green section_title">A Trybe é para todos, inclusive para <strong>VOCÊ.</strong></h3>
-    <p class="paragraph_geral">
-      Para você que <strong>já é estudante de computação,</strong> para você que <strong>se interessa pelo assunto</strong> e até mesmo para <strong>você que está pensando em mudar de carreira</strong> e ainda não conhece nada.
-    </p>
-    <p class="paragraph_geral">
-      A Trybe funciona para <strong>qualquer pessoa</strong> que queira uma <strong>carreira de sucesso em tecnologia.</strong>
-    </p>
-    <p class="paragraph_geral">
-      <strong>E QUE TENHA MUITA VONTADE E DEDICAÇÃO!</strong>
-    </p>
-
+    <div class="market">
+      <h3 class="trybe_green section_title">A Trybe é para todos, inclusive para <strong>VOCÊ.</strong></h3>
+      <div class="market-text">
+        <p class="paragraph_geral">
+          Para você que <strong>já é estudante de computação,</strong> para você que <strong>se interessa pelo assunto</strong> e até mesmo para <strong>você que está pensando em mudar de carreira</strong> e ainda não conhece nada.
+        </p>
+        <p class="paragraph_geral">
+          A Trybe funciona para <strong>qualquer pessoa</strong> que queira uma <strong>carreira de sucesso em tecnologia.</strong>
+        </p>
+        <p class="paragraph_geral">
+          <strong>E QUE TENHA MUITA VONTADE E DEDICAÇÃO!</strong>
+        </p>
+      </div>
+    </div>
     <img class="picture" src="images/conrado-medeiros.png" alt="Conrado Medeiros" width="100px">
     <p class="paragraph_geral">
       <em>"Eu trabalho com Marketing e não tinha nenhuma formação ou experiência na área e consegui entrar na Trybe para me tornar desenvolvedor de software."</em>
