--- a/bloco_3/dia_1/trybe_marketing.html
+++ b/bloco_3/dia_1/trybe_marketing.html
@@ -39,27 +39,33 @@
         </p>
       </div>
     </div>
-    <img class="picture" src="images/conrado-medeiros.png" alt="Conrado Medeiros" width="100px">
-    <p class="paragraph_geral">
-      <em>"Eu trabalho com Marketing e não tinha nenhuma formação ou experiência na área e consegui entrar na Trybe para me tornar desenvolvedor de software."</em>
-    </p>
-    <h4 class="trybe_green testimonial_name">Conrado Medeiros<br>Aluno da Turma de Setembro - BH</h4>
 
-    <img class="picture" src="images/gabriel-dos-santos.png" alt="Gabriel Santos" width="100px">
-    <p class="paragraph_geral">
-      <em>"Eu não sabia nada de programação! Estudei os conteúdos gratuitos disponibilizados, consegui fazer o processo e passar. Estou aqui firme e forte para conseguir virar um desenvolvedor."
-      </em>
-    </p>
-    <h4 class="trybe_green testimonial_name">Gabriel dos Santos<br>Aluno da Turma de Setembro - BH</h4>
-
-    <img class="picture" src="images/anderson-bolivar.png" alt="Anderson Bolivar" width="100px">
-    <p class="paragraph_geral">
-      <em>"Sou estudante de Engenharia Química e entrei na Trybe sem nenhuma experiência na área e estou animado para me tornar desenvolvedor."
-    </em>
-    </p>
-    <h4 class="trybe_green testimonial_name">Anderson Bolivar<br>Aluno da Turma de Setembro - BH</h4>
-
-    <hr>
+    <div class="student-testimonial">
+      <div class="student-container">
+        <img class="picture" src="images/conrado-medeiros.png" alt="Conrado Medeiros" width="100px">
+        <p class="paragraph_geral">
+          <em>"Eu trabalho com Marketing e não tinha nenhuma formação ou experiência na área e consegui entrar na Trybe para me tornar desenvolvedor de software."</em>
+        </p>
+        <h4 class="trybe_green testimonial_name">Conrado Medeiros<br>Aluno da Turma de Setembro - BH</h4>
+      </div>
+      <div class="student-container">
+        <img class="picture" src="images/gabriel-dos-santos.png" alt="Gabriel Santos" width="100px">
+        <p class="paragraph_geral">
+          <em>"Eu não sabia nada de programação! Estudei os conteúdos gratuitos disponibilizados, consegui fazer o processo e passar. Estou aqui firme e forte para conseguir virar um desenvolvedor."
+          </em>
+        </p>
+        <h4 class="trybe_green testimonial_name">Gabriel dos Santos<br>Aluno da Turma de Setembro - BH</h4>
+      </div>
+      <div class="student-container">
+        <img class="picture" src="images/anderson-bolivar.png" alt="Anderson Bolivar" width="100px">
+        <p class="paragraph_geral">
+          <em>"Sou estudante de Engenharia Química e entrei na Trybe sem nenhuma experiência na área e estou animado para me tornar desenvolvedor."
+        </em>
+        </p>
+        <h4 class="trybe_green testimonial_name">Anderson Bolivar<br>Aluno da Turma de Setembro - BH</h4>
+      </div>
+    </div>
+    
 
     <h3 class="trybe_green section_title">Quem somos e por que estamos aqui?</h3>
     <img class="picture" src="https://uploads-ssl.webflow.com/5d4c18a28620ae5d4f33af94/5d82bafbe8178d5be56113af_Matheus%20Goyas.jpeg" alt="Matheus Goyas" width="100px">
@@ -74,21 +80,22 @@
     </p>
     <h4>João Duarte,<br>CEO e Co-fundador da Trybe</h4>
 
-    <hr>
-
-    <h3 class="trybe_green section_title">Como é a formação?</h3>
-    <ul class="paragraph_geral">
-      <li>Atividades <strong>online, offline e apoio individual</strong> para cada aluno</li>
-      <li>Experiência <strong>mão na massa,</strong> lidando com <strong>desafios e problemas reais</strong></li>
-      <li>Equipe dedicada a te ajudar a encontrar a <strong>oportunidade profissional perfeita para você</strong>
-      </li>
-      <li>Vivência das <strong>rotinas e processos reais</strong> de desenvolvimento das <strong>empresas de ponta</strong></li>
-    </ul>
-    <img src="images/learning-web.jpeg" alt="Pessoas interagindo com notebooks" width="600px">
-
-    <hr>
-
-    <h4 class="trybe_green">Quer saber mais sobre nossa formação?</h4>
-    <a class="button" href="https://www.betrybe.com/" target="_blank"><strong>Faça o download do nosso currículo</strong></a>
+    <div class="learning">
+      <div class="learning-left">
+        <h3 class="trybe_green section_title">Como é a formação?</h3>
+        <ul class="paragraph_geral">
+          <li>Atividades <strong>online, offline e apoio individual</strong> para cada aluno</li>
+          <li>Experiência <strong>mão na massa,</strong> lidando com <strong>desafios e problemas reais</strong></li>
+          <li>Equipe dedicada a te ajudar a encontrar a <strong>oportunidade profissional perfeita para você</strong>
+          </li>
+          <li>Vivência das <strong>rotinas e processos reais</strong> de desenvolvimento das <strong>empresas de ponta</strong></li>
+        </ul>
+      </div>
+        <img class="learning-right"src="images/learning-web.jpeg" alt="Pessoas interagindo com notebooks" width="600px">
+      <div class="footer">
+        <h4 class="trybe_green">Quer saber mais sobre nossa formação?</h4>
+        <a class="button" href="https://www.betrybe.com/" target="_blank"><strong>Faça o download do nosso currículo</strong></a>
+      </div>
+    </div>
   </body>
 </html>
