Adiciona paragrafos e links

--- a/exercises/introducao-a-html-e-css_4/index.html
+++ b/exercises/introducao-a-html-e-css_4/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Stomatopoda</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
       <h1>Soco a 80Km/h: Conheça o Stomatopoda</h1>
     </header>
-    <nav class="links">
+    <nav>
       <ul>
         <li>Página Inicial</li>
         <li>Sobre</li>
@@ -18,16 +19,16 @@
     </nav>
     <article>
       <h2>Fatos sobre o Stomatopoda</h2>
-      <img src="https://s3.amazonaws.com/theoatmeal-img/comics/mantis_shrimp/mantis_shrimp_3.jpg" alt="Stomatopoda" width="400px">
+      <img src="stomatopoda.jpg" alt="Stomatopoda" width="400px">
       <h3>Classificação Científica</h3>
-      <table class="border">
+      <table>
         <tr>
-          <td>Reino</td>
-          <td>Filo</td>
-          <td>Subfilo</td>
-          <td>Classe</td>
-          <td>Subclasse</td>
-          <td>Ordem</td>
+          <td><strong>Reino</strong></td>
+          <td><strong>Filo</strong></td>
+          <td><strong>Subfilo</strong></td>
+          <td><strong>Classe</strong></td>
+          <td><strong>Subclasse</strong></td>
+          <td><strong>Ordem</strong></td>
         </tr>
         <tr>
           <td>Animalia</td>
@@ -40,10 +41,32 @@
       </table>
 
       <h2>Fatos interessantes</h2>
-        <h1>Velocidade do Soco</h1>
-          <p>
-            De acordo com a anatomia da sua pata raptorial é possível distinguir entre dois grupos funcionais, as perfuradoras (spearers) ou as esmagadoras (smashers). As maiores esmagadoras, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720 km/h) e uma pressão de impacto de 600 N/cm². Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.
-          </p>
-
+      <h3>Velocidade do Soco</h3>
+      <p>
+        De acordo com a anatomia da sua pata raptorial é possível distinguir entre dois grupos funcionais, as perfuradoras (spearers) ou as esmagadoras (smashers). As maiores esmagadoras, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, <strong>um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720 km/h) e uma pressão de impacto de 600 N/cm²</strong>. Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.
+      </p>
+      <h3>O aquecedor</h3>
+        <p>
+          Seus membros se movem tão rapidamente que <strong>a água ao redor ferve</strong> em um processo conhecido como supercavitação. Quando essas bolhas de cavitação entram em colapso, produz uma onda de choque submarina que pode matar a presa mesmo se o camarão mantis errar o alvo.
+        </p>
+        <h3>Visão</h3>
+        <p>
+          Esses animais possuem o mais complexo sistema de visão de cores do mundo animal, pois enxergam <strong>12 cores primárias,</strong> correspondentes aos 12 pigmentos distintos presentes em sua retina. 
+        </p>
+      <h3>Referências Bibliográficas</h3>
+      <ul>
+        <li>
+          https://pt.wikipedia.org/wiki/Stomatopoda
+        </li>
+        <li>
+          https://www.nationalgeographic.com/science/article/natures-most-amazing-eyes-just-got-a-bit-weirder
+        </li>
+        <li>
+          https://aminoapps.com/c/mundo-animal-pt-br/page/blog/stomatopoda/5XXL_DQcVugBXa7VK4LzdwnMYQg7GXQDX
+        </li>
+        <li>
+          https://theoatmeal.com/comics/mantis_shrimp
+        </li>
+      </ul>
     </article>
   </body>
