Adiciona a tag div com a classe main content

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -57,9 +57,15 @@
   </head>
   <body>
     <script> 
+      // Adicione a tag h1 com o texto Exercício 5.2 - JavaScript DOM como filho da tag body ;
       let filho = document.createElement('h1');
       document.body.appendChild(filho);
       filho.innerText = 'Exercicio 5.2 - JavaScript DOM';
+
+      // Adicione a tag div com a classe main-content como filho da tag body ;
+      let filhoDiv = document.createElement('div');
+      document.body.appendChild(filhoDiv);
+      filhoDiv.className = 'main-content';
       
     </script>
   </body>
