--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -114,6 +114,19 @@
         paiLista.appendChild(listaNumeros);
       }
 
+      // 9. Adicione 3 tags h3 , todas sendo filhas do div criado no passo 2.
+      let tag1 = document.getElementsByClassName('left-content')[0];
+      let criandoTag = document.createElement('h3');
+      tag1.appendChild(criandoTag);
+
+      let tag2 = document.getElementsByClassName('left-content')[0];
+      let criandoTag2 = document.createElement('h3');
+      tag2.appendChild(criandoTag2);
+
+      let tag3 = document.getElementsByClassName('left-content')[0];
+      let criandoTag3 = document.createElement('h3');
+      tag3.appendChild(criandoTag3);
+
     </script>
   </body>
 </html>
