Adiciona a classe description nas 3 tags h3

--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -131,11 +131,17 @@
       let adicionaClasseH1 = document.querySelector('h1');
       adicionaClasseH1.className = 'title';
       
-  
+      // 2. Adicione a classe description nas 3 tags h3 criadas;
+      let adicionaClasseH3 = document.getElementsByTagName('h3')[0];
+      adicionaClasseH3.className = 'description';
 
+      let adicionaClasseH3_2 = document.getElementsByTagName('h3')[1];
+      adicionaClasseH3_2.className = 'description';
 
+      let adicionaClasseH3_3 = document.getElementsByTagName('h3')[2];
+      adicionaClasseH3_3.className = 'description';
 
-
+      
     </script>
   </body>
 </html>
