--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -146,6 +146,8 @@
       let removeDiv = document.querySelector('.left-content');
       remove.removeChild(removeDiv);
 
+      // 4. Centralize o div criado no passo 6 (aquele que possui a classe right-content ). Dica: para centralizar, basta configurar o margin-right: auto do div ;
+      document.querySelector('.right-content').style.marginRight = 'auto';
     </script>
   </body>
 </html>
