--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -151,7 +151,15 @@
 
       // 5. Troque a cor de fundo do elemento pai da div criada no passo 3 (aquela que possui a classe center-content ) para a cor verde;
       document.querySelector('.center-content').style.backgroundColor = 'green';
+
+      // 6. Remova os dois últimos elementos ( nove e dez ) da lista criada no passo 8.
+      let ul = document.querySelector('.right-content');
+      let li = document.getElementsByTagName('li')[9];
+      ul.removeChild(li);
       
+      let ul_1 = document.querySelector('.right-content');
+      let li_1 = document.getElementsByTagName('li')[8];
+      ul_1.removeChild(li_1);
     </script>
   </body>
 </html>
